added video thumbnails: transcoder API and front end changes

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
     <div class="chat-container">
         <div class="chat-header">
             <img src="static/images/gemini-logo.png" alt="Gemini" class="gemini-logo">
-            <span style="margin-left: auto; color: #9aa0a6;">2.5 Flash</span>
+            <span style="margin-left: auto; color: #9aa0a6;">2.5 Pro</span>
             <button class="try-advanced">Get Gemini with DataSense</button>
             <span class="material-icons">apps</span>
             <span class="material-icons">account_circle</span>
